--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+.App, .inputs, .todo-list, .todo{
+  display: flex;
+}
+.App{
+  justify-content: center;
+  align-items: center;
+}
+.App{
+  background: linear-gradient(45deg, #7400B8, #6930C3, #5E60CE, #5390D9, #4EA8DE);
+  height: 100vh;
+}
+.main{
+  background-color: #FFF;
+  width: auto;
+  height: auto;
+  padding: 2rem;
+  border-radius: .5rem;
+}
+.inputs, .todo{
+  border-bottom: #CCC 1px solid;
+  padding-bottom: 1rem;
+}
+.inputs,.todo-list{
+  gap: 1rem;
+}
+.inputs input{
+  width: 65%;
+  font-size: 1rem;
+}
+.inputs button{
+  width: 35%;
+}
+.inputs input, .inputs button{
+  border: #7400B8 1px solid;
+  outline: none;
+  padding: .8rem;
+  border-radius: .2rem;
+}
+.inputs button, .buttons button{
+  background: linear-gradient(45deg, #7400B8, #6930C3, #5E60CE);
+  color: #FFF;
+  cursor: pointer;
+  border: none;
+  transition: .25s;
+}
+.inputs button:hover{
+  filter: brightness(120%);
+}
+.todo-list{
+  flex-direction: column;
+  margin-top: 1rem;
+}
+.todo{
+  justify-content: space-between;
+  gap: 3rem;
+}
+.buttons button{
+  padding: .5rem;
+  margin: 0 .3rem;
+  border-radius: .2rem;
 }
