--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,11 +31,11 @@
   gap: 1rem;
 }
 .inputs input{
-  width: 65%;
+  width: 70%;
   font-size: 1rem;
 }
 .inputs button{
-  width: 35%;
+  width: 30%;
 }
 .inputs input, .inputs button{
   border: #7400B8 1px solid;
@@ -43,7 +43,7 @@
   padding: .8rem;
   border-radius: .2rem;
 }
-.inputs button, .buttons button{
+.inputs button{
   background: linear-gradient(45deg, #7400B8, #6930C3, #5E60CE);
   color: #FFF;
   cursor: pointer;
@@ -61,8 +61,35 @@
   justify-content: space-between;
   gap: 3rem;
 }
-.buttons button{
-  padding: .5rem;
-  margin: 0 .3rem;
-  border-radius: .2rem;
+.options{
+  position: relative;
+}
+.options img, .todo-options img{
+  width: 1rem;
+  cursor: pointer;
+}
+.todo-options{
+  position: absolute;
+  background-color: #FFF;
+  box-shadow: 0 4px 9px 0 rgba(0,0,0,.2);
+  list-style: none;
+  width: 7rem;
+  padding:.5rem 0;
+  z-index: 1;
+  top: 5%;
+  right: 0;
+  transform: scale(0);
+  transition: .25s;
+  transform-origin: top right;
+}
+.todo-options.show{
+  transform: scale(1);
+}
+.todo-options li{
+  margin-bottom: .2rem;
+  padding: .5rem 1rem;
+  cursor: pointer;
+}
+.todo-options li:hover{
+  background-color: #CCC;
 }
